# faststore

./: .gitignore  LICENSE  README.MD  README.md  app.py  index.html  mkdocs.yml  pylintrc  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: action.yaml  docs.yml  master.yaml  publish.yml
docs/: changelog.md  configuration.md  index.md
docs/api/: config.md  engines.md  exceptions.md  filedata.md  filefield.md  filestore.md  index.md  store.md
docs/examples/: avatars.md  documents.md  image-pipeline.md  index.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guide/: backends.md  callbacks.md  errors.md  index.md  multi-field.md  results.md  validation.md
src/filestore/: __init__.py  azure.py  datastructures.py  exceptions.py  gcs.py  localstorage.py  main.py  memorystorage.py  s3.py  store.py  structs.py  util.py
src/filestore/storage_engines/: __init__.py  azure_engine.py  gcs_engine.py  local_engine.py  memory_engine.py  s3_engine.py  storage_engine.py
test_files/: fastapi_tutorial.epub  fastapi_tutorial.mobi
tests/: __init__.py  app.py  conftest.py  home.html  test_app.py  test_datastructures.py  test_exceptions.py  test_fast_store.py  test_integration.py  test_local_engine.py  test_main.py  test_memory_engine.py  test_util.py  utils.py
