[project]
name = "filestore"
version = "2.0.0b"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ['fastapi', 'filestorage', 'cloudstorage', 'storageengine', 'filestore']
authors = [{name = "Ichinga Samuel", email = "ichingasamuel@gmail.com"}]
description = "Storage Engine Package for FastAPI"
dependencies = [
    "boto3>=1.40.21",
    "fastapi",
    "python-dotenv>=1.1.1",
    "python-multipart",
    "uvicorn>=0.35.0",
]
[project.optional-dependencies]
s3 = [
    'boto3',
]

[project.urls]
"Homepage" = "https://github.com/Ichinga-Samuel/faststore"
"Bug Tracker" = "https://github.com/Ichinga-Samuel/faststore/issues"

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.1",
]
